--- a/smysl3/.gitignore
+++ b/smysl3/.gitignore
@@ -3,3 +3,18 @@ smysl3/blog/__pycache__
 smysl3/smysl3/__pycache__
 smysl3/blog/migrations
 smysl3/functional_tests/__pycache__
+
+.vercel
+*.log
+*.pyc
+db.sqlite3
+media
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
