--- a/smysl3/requirements.txt
+++ b/smysl3/requirements.txt
@@ -8,6 +8,7 @@ h11==0.14.0
 idna==3.4
 outcome==1.2.0
 psycopg2==2.9.5
+psycopg2-binary==2.9.5
 pycparser==2.21
 PySocks==1.7.1
 python-dotenv==1.0.0
