--- a/smysl3/requirements.txt
+++ b/smysl3/requirements.txt
@@ -3,13 +3,16 @@ async-generator==1.10
 attrs==22.2.0
 certifi==2022.12.7
 cffi==1.15.1
+dj-database-url==1.2.0
 Django==4.1.7
 h11==0.14.0
 idna==3.4
 outcome==1.2.0
+psycopg2==2.9.5
 psycopg2-binary==2.9.5
 pycparser==2.21
 PySocks==1.7.1
+python-decouple==3.8
 python-dotenv==1.0.0
 pytz==2022.7.1
 selenium==4.8.2
