--- a/smysl3/requirements.txt
+++ b/smysl3/requirements.txt
@@ -8,6 +8,7 @@ Django==4.1.7
 h11==0.14.0
 idna==3.4
 outcome==1.2.0
+psycopg2==2.9.5
 psycopg2-binary==2.9.5
 pycparser==2.21
 PySocks==1.7.1
@@ -22,4 +23,5 @@ trio==0.22.0
 trio-websocket==0.9.2
 tzdata==2022.7
 urllib3==1.26.14
+whitenoise==6.4.0
 wsproto==1.2.0
